# worker

./: .env.default  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: docker-publish.yml
worker/: __main__.py  config.py  schemas.py
worker/client/: api.py  aws.py
worker/handler/: general.py  watcher.py
worker/handler/checkpoints/: checkpoint_epoch_300.pth.tar
worker/handler/data/: dataset.py
worker/handler/model/: conv_norm_relu_block.py  discriminator.py  generator.py
worker/handler/utils/: LR_Function.py  buffer.py  denormalization.py  mse_loss_redefined.py  save_and_load.py  weights_initialization.py
